--- a/Projects/Project1/Diamonds.Rmd
+++ b/Projects/Project1/Diamonds.Rmd
@@ -16,47 +16,60 @@ library(tidyverse)
 library(pander)
 ```
 
-```{r}
-D <- diamonds %>%
-  filter(cut == "Ideal")
 
+
+## Background
+
+Diamonds are valuable gems that are often used when proposing marriage. Student's at BYU - Idaho are at a time in their lives when they are concidering proposal with a ring. Many have very fixed budgets. We have been provided with a dataset that contains tens of thousands of different diamonds and variables of the diamonds like cut, color, carat, dimensions and costs. Because these students are proposing to the love of their lives, they want the best cut and best colors available so we will only use "D" colored diamonds and "Ideal" cut diamonds. We will base our regression after this subsetted data. Carat is the variable in question. We want a regression of Price and Carat for these particular diamonds. 
+
+```{r}
+diamonds1 <- diamonds %>%
+  filter(cut == "Ideal" & color == "D")
 ```
+
+
 ## Our X variable: PRICE
-From the plot below, we can see that the price is skewed to one side for diamonds with ideal cuts. The bulk of our prices lie below \$5000. To make this normal, we will only look for ideal cut diamonds under the price of \$5000.
+From the plot below, we can see that the price is skewed to one side for diamonds with ideal cuts and color "D". The bulk of our prices lie below \$5000. Because most students wouldn't be able to afford a diamond over \$5000, we will only look for ideal cut diamonds under the price of \$5000.
 
 ```{r}
-stripchart(D$price, method = "stack")
+hist(diamonds1$price)
 ```
 
 ```{r}
-hist(D$price)
-```
-
-```{r}
-popdiamond <- D %>%
+D <- diamonds1 %>%
   filter(price <= 5000)
 ```
 
 Our distribution is a little more normal as we do this, but it is still far from it. 
 
 ```{r}
-hist(popdiamond$price)
+hist(D$price)
 ```
 
 ## Insights for Y variable: CARAT
 
 As we look at our 5 number summary for the carat of the diamonds in our data, we notice that the data is skewed to the right. The mean is greater than the median, meaning that more of the data is found to be greater than the median. 
-```{r}
-pander(favstats(popdiamond$carat))
 
-boxplot(popdiamond$carat, horizontal = TRUE)
+```{r}
+pander(favstats(D$carat))
+
+boxplot(D$carat, horizontal = TRUE)
 ```
 
-## Plotting our Regression model 
+### The Plot/Lowess Curve
 
-When we plot the carat and price of these diamonds, we can see that it is an upward trend. And when we plot a linear regression we see that is assumption is correct. 
+To get a visual idea of the type of regression we are going to look for, we will plot a lowess curve on our plotted data (in red), and our linear regression line (in blue). We can see that they are not similar. We will have to use some transformations to find a better fit regression model. We will make sure that our linear model really isn't as accurate as it seems below. 
 
-Our conclusions and formulat for our regression model are as follows: 
+```{r}
+plot(carat ~ price, data = D, pch = 18)
+lines(lowess(D$price, D$carat), col = "red", lwd = 2)
+D.lm <- lm(carat ~ price, data = unclass(D))
+abline(D.lm, col = "blue", lwd = 2)
+
+```
+
+
+We will be testing $\beta_1$ because it's our slope that's in question. Our alternative conclusions are as follows: 
 
 $$
 Y_i = \beta_0 + \beta_1 * X_i + \epsilon_i 
@@ -78,18 +91,18 @@ $$
 \alpha = 0.05
 $$
 
-
 ```{r}
-plot(carat ~ price, data = popdiamond, pch = 16, cex = 0.8)
-diamond.lm <- lm(carat ~ price, data = popdiamond)
-abline(diamond.lm, col = "red")
+summary(D.lm)
 ```
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 pander(anova(diamond.lm))
 pander(summary(diamond.lm)) 
+pander(pureErrorAnova(diamond.lm))
 ```
+
+We see that our Adjusted R-Squared value is 0.8546 which isn't too bad, but there could still be a better fitted model. 
 
 ## Assumptions and Departures from the Model
 
@@ -100,51 +113,67 @@ pander(summary(diamond.lm))
 * The error terms are normally distributed
 * All important perdictor variables have been included in the model 
 
-### Normality of the residuals
+### Normality of the Residuals
+
+From this graphic we can see that our residuals are normally distribted and there doesn't seem to be any outlier. Possibly with a residual at -0.4. We will dismiss this for now.
+
 
 ```{r message=FALSE, warning=FALSE}
-hist(diamond.lm$residuals)
+hist(D.lm$residuals)
 ```
 
 ### Residual vs. Fitted
 
+We notice that our variance doesn't look constant. As we move down the graph, we notice that the residuals get wider spread apart. This means that we need a y-axis transformation to resolve this. There seems to be chaos displayed here, but there seems to be "chunks" which may suggest that there is a variable that we haven't included with our data that could be of importance. 
+
+Is there a pattern here that we aren't taking into account? There are "chunks". 
+
 ```{r message=FALSE, warning=FALSE}
-plot(diamond.lm, where = 1:4)
+plot(D.lm, where = 1)
 ```
 
 ### Sequence Plot
 
+For the most part, there seems to be independent errors terms except for something happening at Index 500. This may have come from the same issue in our Residual vs. Fitted plot. 
+
 ```{r message=FALSE, warning=FALSE}
-plot(diamond.lm$residuals)
+plot(D.lm$residuals)
 ```
 
 ### QQ-plot
 
+our distribution of the data seems to be normal for the most part, except for the ends. This, as well, may be due to missing data from our model. 
+
 ```{r message=FALSE, warning=FALSE}
-qqPlot(diamond.lm)
+qqPlot(D.lm)
 ```
 
 
 ## Confidence Interval and Data Prediction
 
+Our confidence Interval 
+
 ## Transformed Model
 
-```{r}
-boxCox(diamond.lm, seq(0.44, 0.49, 0.01))
 
-plot(sqrt(carat) ~ price, data = popdiamond)
-diamond.2.lm <- lm(sqrt(carat) ~ price, data = popdiamond)
+#BOXCOX isn't working getting Error in terms.formula(formula, data = data) : 'data' argument is of the wrong type
+
+``{r}
+boxCox(D.lm)
+
+plot(sqrt(carat) ~ price, data = D)
+diamond.2.lm <- lm(sqrt(carat) ~ price, data = D)
 abline(diamond.2.lm, col = 'red')
 
 b <- coef(diamond.2.lm)
 
 summary(diamond.2.lm)
 
-plot(carat ~ price, data = popdiamond)
+plot(carat ~ price, data = D)
 
-curve((b[1] + b[2] *x)^2, add = TRUE, col = "red")
+curve((b[1] + b[2] *x)^2, add = TRUE, col = "red", lwd = 2)
 
-```
+``
 
 $\lambda$ = 0.471
 
